# employee-simulation-system

./: .flake8  .gitignore  .releaserc.yml  CHANGELOG.md  CODEOWNERS  CONFIG_DOCUMENTATION.md  Dockerfile  MANIFEST.in  Makefile  PLANNING.md  README.md  TASK.md  __init__.py  advanced_story_export_system.py  analysis_narrator.py  analyze_individual_progression.py  app_paths.py  clean_whitespace.py  commands.txt  comprehensive_dashboard_builder.py  comprehensive_employee_analysis.md  config_examples.py  config_examples.py.orig  config_manager.py  data_export_system.py  debug_smart_logger.py  docker-compose.yml  employee_analysis_report.md  employee_explorer.ipynb  employee_population_simulator.py  employee_simulation_orchestrator.py  employee_story_tracker.py  file_optimization_manager.py  gel_output_manager.py  gel_policy_constraints.py  individual_employee_parser.py  individual_progression_simulator.py  interactive_dashboard_generator.py  interactive_salary_calculator.py  intervention_strategy_simulator.py  (+31 more)
.github/workflows/: build.yml  release.yml
PRPs/: PRP_GEL_reporting_and_roles_config_task1.md  PRP_results-paths-and-scope.md  employee-simulation-remediation-cost-analysis-improvement.md  individual-salary-progression-modeling.md  task1.md  user-centric-visualization-system.md
common/: __init__.py
common/config/: __init__.py  constants.py
common/services/: __init__.py  file_service.py
common/utils/: __init__.py  calculation_utils.py  export_utils.py
config/orgs/GEL/: roles.yaml
docs/: API.md  CONFIGURATION_GUIDE.md  DEVELOPER.md  README.md  SETTINGS_REFERENCE.md  USER_GUIDE.md
research/: codebase-analysis.md  comprehensive-hr-analytics-research-summary.md  cost-reporting-standards-compensation-analysis.md  gender-pay-gap-remediation.md  hr-analytics-intervention-cost-analysis-examples.md  hr-dashboard-design-guidelines.md  salary-equity-gap-analysis-intervention-modeling.md  salary-progression-modeling.md  salary-remediation-cost-calculation-best-practices.md
research/hr-analytics-visualization/: current-codebase-analysis.md  industry-best-practices.md
test_output/: report.md
test_results/GEL/: latest
tests/: __init__.py  test_advanced_story_export_system_simple.py  test_all_modules_comprehensive.py  test_analysis_narrator.py  test_analysis_narrator_simple.py  test_analyze_individual_progression.py  test_analyze_individual_progression_simple.py  test_basic.py  test_convergence_analyzer.py  test_data_export_system_simple.py  test_debug_smart_logger_simple.py  test_employee_simulation_orchestrator_simple.py  test_employee_story_tracker_simple.py  test_file_optimization_manager_simple.py  test_gel_integration.py  test_gel_policy_constraints.py  test_individual_employee_parser.py  test_individual_employee_parser_simple.py  test_individual_progression.py  test_interactive_dashboard_generator_simple.py  test_interactive_salary_calculator.py  test_interactive_salary_calculator_simple.py  test_intervention_strategies.py  test_intervention_strategy_simulator_simple.py  test_management_dashboard_generator.py  test_management_dashboard_generator_simple.py  test_massive_coverage_boost.py  test_median_convergence_analyzer_simple.py  test_model_interventions.py  test_model_interventions_simple.py  test_orchestrator.py  test_performance_optimization_manager_simple.py  test_performance_review_system_simple.py  test_population_simulator.py  test_review_cycle_simulator_simple.py  test_roles_config.py  test_run_employee_simulation.py  test_run_employee_simulation_simple.py  test_salary_forecasting.py  test_salary_forecasting_engine_simple.py  (+4 more)
